# opengl_practice

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
01_blank_window/: CMakeLists.txt  main_blank_window.cpp
02_triangle/: CMakeLists.txt  main_triangle.cpp
03_coloured_triangle/: CMakeLists.txt  main_triangle.cpp
04_moving_triangle/: CMakeLists.txt  fragment_shader_source.glsl  main_moving_triangle.cpp  shader_source.glsl
04_rotating_triangle/: main_moving_triangle.cpp  shader_source.glsl
05_uniforms_and_transformations/: CMakeLists.txt  main_transformation.cpp
06_square/: CMakeLists.txt  main_square.cpp
gemini guidance/01_blank_window/: main_blank_window.cpp
gemini guidance/02_triangle/: CMakeLists.txt  main_triangle.cpp
gemini guidance/03_coloured_triangle/: main_triangle.cpp
gemini guidance/04_moving_triangle/: CMakeLists.txt  main_moving_triangle.cpp  shader_source.glsl
gemini guidance/05_uniforms_and_transformations/: main_transformation.cpp
gemini guidance/06_square/: fragment_shader_source.glsl
gemini guidance/07_textured_square/: shader_source.glsl
gemini_guidance/: CMakeLists.txt
gemini_guidance/01_blank_window/: CMakeLists.txt
gemini_guidance/03_coloured_triangle/: CMakeLists.txt  main_triangle.cpp  shader_source.glsl
gemini_guidance/04_rotating_triangle/: CMakeLists.txt  main_moving_triangle.cpp
gemini_guidance/05_uniforms_and_transformations/: shader_source.glsl
gemini_guidance/06_square/: main_square.cpp  shader_source.glsl
gemini_guidance/07_textured_square/: CMakeLists.txt  fragment_shader_source.glsl  main_textured_square.cpp
learn_opengl/: CMakeLists.txt  MySummeryAndUnderstanding.md
learn_opengl/01_creating_window/: CMakeLists.txt  creating_window.md  hello_window.cc
learn_opengl/02_creating_triangle/: CMakeLists.txt  creating_triangle.md  fragment.frag  hello_triangle.cc  hello_two_triangles.cc  vertex_shader.glsl
learn_opengl/03_shaders/: CMakeLists.txt  a03_hello_shaders  fragment.frag  fragment_prog_colour.frag  hello_uniforms.cc  more_attributes.cc  shaders.md  vertex_shader.glsl
learn_opengl/04_textures/: 01_texture.cc  02_smiley.cc  CMakeLists.txt  textures.md
learn_opengl/excercises/: CMakeLists.txt
learn_opengl/excercises/03_shaders/: CMakeLists.txt  moving_triangle.cc  upside_down_triangle.cc
learn_opengl/excercises/03_shaders/shaders/: moving.frag  moving.glsl
learn_opengl/excercises/04_textures/: 01_smiley.cc  03_texture_blending.cc  CMakeLists.txt
learn_opengl/excercises/04_textures/shaders/: vertex.vert
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb/src/: stb_image.cc
scripts/: installments.sh
tools/: CMakeLists.txt
tools/include/tools/: shader.h  window.h
tools/src/: shader.cc  shader.hh  window.cc
