
add_subdirectory("01_blank_window")
add_subdirectory("02_triangle")
add_subdirectory("03_coloured_triangle")
add_subdirectory("04_moving_triangle")
add_subdirectory("04_rotating_triangle")
add_subdirectory("05_uniforms_and_transformations")
add_subdirectory("06_square")
add_subdirectory("07_textured_square")